--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<!-- Optional configurations -->
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
