--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,11 @@
 server:
-  port: 9980
+  port: 2008
 spring:
-  application:
-    name: mysqldoc
+
   datasource:
-    url: jdbc:mysql://localhost:3306/kuber
+    url: jdbc:mysql://db:3306/test
     username: root
-    password: pass@word1
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
